# Quadrupel

./: .gitignore  README.md  lint
custom/: CMakeLists.txt  package.xml
custom/msg/: ServoCmd.msg  ServoCmdArray.msg
custom/srv/: LegInvKin.srv  Transform.srv
naive_crawl/: package.xml  setup.cfg  setup.py
naive_crawl/naive_crawl/: naive_crawl.py  transform_test.py
quad_gaits/: package.xml  setup.cfg  setup.py
quad_gaits/quad_gaits/: cont_gait.py  crab_gait.py  discont_gait.py
quad_inv_kin/: package.xml  setup.cfg  setup.py
quad_inv_kin/quad_inv_kin/: joy_steer.py  leg_inv_kin.py
quad_params/: package.xml  quad_params.json  setup.cfg  setup.py
quad_steer/: package.xml  setup.cfg  setup.py
quad_steer/quad_steer/: joy_steer.py  static_steer.py  translation.py
quad_vis/: CMakeLists.txt  README.md  package.xml
quad_vis/launch/: cont_gait.launch.py  crab_gait.launch.py  discont_gait.launch.py  quad_control.launch.py  quad_naive_gait.launch.py  quad_steer.launch.py  quad_vis.launch.py
quad_vis/quad_vis/: dh2urdf.py  legs_dh.csv  transformations.py
quad_vis/urdf/: leg.urdf.template  robot.urdf  robot.urdf.template
servo_comm/: package.xml  servo_center.csv  setup.cfg  setup.py
servo_comm/servo_comm/: listener.py
servo_comm/src/: listener.py
tf2_ros_own/: CMakeLists.txt  package.xml  setup.py
tf2_ros_own/include/tf2_ros_own/: async_buffer_interface.h  buffer.h  buffer_client.h  buffer_interface.h  buffer_server.h  create_timer_interface.h  create_timer_ros.h  message_filter.h  static_transform_broadcaster.h  transform_broadcaster.h  transform_listener.h
tf2_ros_own/src/: buffer.cpp  buffer_client.cpp  buffer_server.cpp  buffer_server_main.cpp  create_timer_ros.cpp  static_transform_broadcaster.cpp  static_transform_broadcaster_program.cpp  transform.cpp  transform_broadcaster.cpp  transform_listener.cpp
tf2_ros_own/src/tf2_ros_own/: buffer.py  buffer_client.py  buffer_interface.py  transform_listener.py
utils_py/: package.xml  setup.cfg  setup.py
utils_py/utils_py/: joint_state_pub.py  manual_servo.py
